yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  template:
    metadata:
      name: my-pod
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0
  replicas: 3
  selector: 
    matchLabels:
      tier: frontend
