yaml/pod-with-config-map.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-config-map
spec:
  containers:
  - name: nginx
    image: nginx
