yaml/pod-with-env-variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-env-variable
spec:
  containers:
  - name: nginx
    image: nginx
