yaml/pod-with-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-init
spec:
  containers:
  - name: nginx
    image: nginx
