yaml/pod-with-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-node-selector
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    size: Large
