yaml/pod-with-readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-readiness-probe
spec:
  containers:
  - name: nginx
    image: nginx
    readinessProbe:
      httpGet:
        path: /api/ready
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 1
      failureThreshold: 10
    livenessProbe:
      httpGet:
        path: /api/live
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 1
      failureThreshold: 10
