yaml/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-node-port
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
  selector:
    app: myapp
    type: front-end
