yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
        - path: /api/users/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-clusterip-srv
              port:
                number: 3000
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-clusterip-srv
              port:
                number: 3000
